Fix nav bar spacing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -142,6 +142,15 @@ header a {
     flex-direction: column;
 }
 
+.menu ul {
+ margin-top: 15px;
+}
+
+.menu li {
+    margin: 0;
+    padding: -10px;
+}
+
 .menu h1 {
     text-align: center;
     margin: 80px 0;
